--- a/GLM on abundance_pres.Rmd
+++ b/GLM on abundance_pres.Rmd
@@ -43,43 +43,6 @@ nursery_columns <- c(c("location","depth","transect","date","nursery_diversity",
 df.nursery_sample_data <- df.sample_data[nursery_columns] # subset of the data with only the nursery species
 ```
 
-##GLM on abundance_pres
-
-```{r glm_nur_ab_pres_loop}
-
-speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
-for (spnum in speciesrows){
-  sp <- df.species_all[spnum,]
-  print(sp$colname)
-  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
-  if(nrow(n)<5){
-    print("Less than 5 rows remaining in subset")
-    next
-  }
-  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
-    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * n$size_seagrass * n$mpa * n$north
-  }
-  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
-    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * n$size_seagrass * n$depth * n$north  
-  }
-  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
-    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * n$size_seagrass * n$north  
-  }
-  else{
-    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * n$size_seagrass * n$mpa * n$depth * n$north  
-  }
-  print(paste("Formula",sp,":",formula))
-  res <- glm(formula, family="poisson")
-  print(summary(res))
-  par(mfrow=c(1,2)) 
-  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
-  tryCatch( 
-    lines(smooth.spline(fitted(res), residuals(res))), 
-    error=function(e){})
-    qqnorm(res$residuals)
-  qqline(res$residuals) }
-```  
-
 ##GLM family=Poisson on abundance_pres
 
 Independent variables: size_seagrass, distance_seagrass, mpa, depth, north
@@ -139,6 +102,435 @@ for (spnum in speciesrows){
 }
 ```
 
-```{r glm_Pois_nur_loop_table}
+```{r glm_Pois_nur_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+log(size)
+
+```{r glm_nur_Lsize_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * log(n$size_seagrass) * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * log(n$size_seagrass) * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * log(n$size_seagrass) * n$north  
+  }
+  else{
+    formula <- n[,c(sp$colname)] ~ n$distance_seagrass * log(n$size_seagrass) * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="poisson"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Lsize_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+log(distance)
+
+```{r glm_nur_Ldist_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * n$size_seagrass * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * n$size_seagrass * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * n$size_seagrass * n$north  
+  }
+  else{
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * n$size_seagrass * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="poisson"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Ldist_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+log(size) & log (distance)
+
+```{r glm_nur_Lsize-dist_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$north  
+  }
+  else{
+    formula <- n[,c(sp$colname)] ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="poisson"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Lsize-dist_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+##GLM family=Gaussian on abundance_pres
+
+log(abundance)
+
+```{r glmnur_Labun_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * n$size_seagrass * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * n$size_seagrass * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * n$size_seagrass * n$north  
+  }
+  else{
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * n$size_seagrass * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="gaussian"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Labun_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+log(abundance) & log(size)
+
+```{r glm_nur_Labun-size_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * log(n$size_seagrass) * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * log(n$size_seagrass) * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * log(n$size_seagrass) * n$north  
+  }
+  else{
+    formula <- log(n[,c(sp$colname)]) ~ n$distance_seagrass * log(n$size_seagrass) * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="gaussian"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Labun-size_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+log(abundance) & log(distance)
+
+```{r glm_nur_Labun-dist_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * n$size_seagrass * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * n$size_seagrass * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * n$size_seagrass * n$north  
+  }
+  else{
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * n$size_seagrass * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="gaussian"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Lbun-dist_table}
+knitr::kable(glm_tab, escape=TRUE)
+```  
+
+log(abundance), log(size) & log (distance)
+
+```{r glm_nur_Labun-size-dist_loop} 
+glm_tab <- data.frame(species=c(), coefficient=c(), pvalue=c())
+
+speciesrows <- c(1:3,25:28,36,39,40,42,47,52:54,58,66,84:86,88,91:100,102:104)
+for (spnum in speciesrows){
+  sp <- df.species_all[spnum,]
+  print(sp$colname)
+  n <- subset(df.sample_data, df.sample_data[c(sp$colname_pres)] > 0)
+  if(nrow(n)<5){
+    print("Less than 5 rows remaining in subset")
+    next
+  }
+  if(length(unique(n$depth))==1 & length(unique(n$mpa))>1){
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$mpa * n$north
+  }
+  else if (length(unique(n$depth))>1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$depth * n$north  
+  }
+  else if (length(unique(n$depth))==1 & length(unique(n$mpa))==1){
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$north  
+  }
+  else{
+    formula <- log(n[,c(sp$colname)]) ~ log(n$distance_seagrass) * log(n$size_seagrass) * n$mpa * n$depth * n$north  
+  }
+  print(paste("Formula",sp$colname,":",as.character(formula)))
+  res <- NULL
+  tryCatch(
+  res <- glm(formula, family="gaussian"),
+    error=function(e){ print("GLM kon niet uitgevoerd worden.");print(geterrmessage())}
+  )
+  if(is.null(res)){
+    next
+  }
+  
+  coefs <- as.data.frame(coef(summary(res)))
+  coefs <- subset(coefs,coefs$`Pr(>|z|)`<=0.05)
+  coefs <- data.frame(species=rep(sp$colname,nrow(coefs)),coefficient=rownames(coefs),pvalue=coefs$`Pr(>|z|)`)
+  coefs <- subset(coefs, coefs$coefficient != '(Intercept)')
+  
+  if(nrow(coefs)==0){
+    next
+  }
+  glm_tab <- rbind(glm_tab, coefs)
+  print(paste("AIC",sp$colname,": ",summary(res)$aic))
+  par(mfrow=c(1,2)) 
+  plot(fitted(res),residuals(res),xlab="Fitted values", ylab="Residuals", abline(h=0, lty=2))
+  title(sp$colname)
+  tryCatch( 
+    lines(smooth.spline(fitted(res), residuals(res))), 
+    error=function(e){}  )
+  qqnorm(res$residuals)
+  qqline(res$residuals) 
+}
+```
+
+```{r glm_nur_Labun-size-dist_table}
 knitr::kable(glm_tab, escape=TRUE)
 ```  
