--- a/loaddata.Rmd
+++ b/loaddata.Rmd
@@ -33,8 +33,8 @@ df.sites <- list() #empty list
 df.sites$name <- c('Antulang','Guinsuan','Malatapay','Andulay','Basak','Lutoban South','Lutoban Pier','Kookoos Nest','Dauin Poblacion') #add the names
 df.sites$distance_seagrass <- c(25,15,53,106,49,22,9,1511,15) 
 df.sites$size_seagrass <- c(0.15,1.83,0.65,0.01,3.89,15.34,15.18,0.05,0.13)
-df.sites$distance_mangroves <- sample(1:1000, 9)
-df.sites$size_mangroves <- sample(1:400, 9)
+df.sites$distance_mangroves <- c(3188,4174,6174,1980,4849,455,182,2166,15336)
+df.sites$size_mangroves <- c(6721,15468,15468,6721,15468,5832,5932,40918,15468)
 df.sites$mpa <- c('non-mpa','non-mpa','non-mpa','mpa','mpa','mpa','non-mpa','non-mpa','mpa')
 df.sites$north <- c('south','north','north','south','north','south','south','south','north')
 df.sites <- data.frame(df.sites)
